Fix javascript bugs; remove unneeded .js files; fix find box alignment; show rating_name in ratings

--- a/public/stylesheets/find_box.css
+++ b/public/stylesheets/find_box.css
@@ -44,7 +44,7 @@ float: right;
 .auto_find{
   position: absolute;
   right: 81px;
-  top: 17px;
+  top: 19px;
   right: 20px;
 
   font-family: Arial, Helvetica, sans-serif;
